tests/baselines/reference/recursiveGetterAccess.errors.txt
tests/cases/compiler/recursiveGetterAccess.ts(2,5): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.


==== tests/cases/compiler/recursiveGetterAccess.ts (1 errors) ====
    class MyClass {
    get testProp() { return this.testProp; }
        ~~~~~~~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
    }
     
    